[gd_scene load_steps=2 format=3 uid="uid://bd1pq0qf5uw48"]

[ext_resource type="Script" path="res://Scripts/startup_scene.gd" id="1_20vgf"]

[node name="Startup" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_20vgf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1184.0
offset_bottom = 665.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -42.5
offset_right = 290.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Status" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Status"

[node name="MessageFromServer" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Message From The Server"

[node name="SendMessage" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Send message to server"

[node name="Server" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Server"

[node name="Client" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Client"

[connection signal="pressed" from="Panel/VBoxContainer/SendMessage" to="." method="_on_send_message_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Server" to="." method="_on_server_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Client" to="." method="_on_client_pressed"]
